# ngen-forcing

./: .gitignore  LICENSE  README.md  pyproject.toml  regrid_ExactExtract.py  regrid_ExactExtract_GFS.py  regrid_ExactExtract_python_bindings_AORC_Forcings.py
.github/: PULL_REQUEST_TEMPLATE.md
AORC_BMI_EE_manual_weights/: .AORC_model.py.swn  .AORC_model.py.swo  AORC_bmi_model.py  AORC_model.py  README.md  config.yml  requirements.txt
AORC_BMI_EE_python/: .AORC_bmi_model.py.swl  .AORC_bmi_model.py.swo  AORC_bmi_model.py  AORC_run_bmi_model.py  README.md  config.yml  environment.yml
AORC_BMI_Unit_Test/: AORC_bmi_model.py  AORC_model.py  AORC_run_bmi_model.py  AORC_run_bmi_unit_test.py  README.md  config.yml  environment.yml  requirements.txt
ESMF_Mesh_Domain_Configuration_Production/: NextGen_hyfab_to_ESMF_Mesh.py  README.md  dflowfm_2_esmf.py  environment.yml  schism_2_esmf.py
Forcing_Extraction_Scripts/: README.md  environment.yml
Forcing_Extraction_Scripts/Alaska/: .get_Alaska_HRRR.py.swo  .get_prod_NBM_Alaska.py.swo  get_Alaska_HRRR.py  get_Alaska_StageIV.py  (+3 more)
NextGen_Forcings_Engine_BMI/: README.md  config.yml  environment.yml  requirements.txt  run_bmi_model.py  run_bmi_unit_test.py
NextGen_Lumped_Forcings_Driver/: .README.md.swm  .README.md.swn  .README.md.swo  NextGen_AORC_forcings_module.py  NextGen_CFS_forcings_module.py  NextGen_GFS_forcings_module.py  NextGen_HRRR_forcings_module.py  NextGen_lumped_forcings_driver.py  README.md  Run_NextGen_lumped_driver.py  environment.yml
cui_esmpy/: regrid_polygon_mesh.py  regrid_polygon_mesh_1netcdf.py
(+146 files in other folders)
